--- a/src/cn/superion/material/purchase/manualCheck/ModManualCheck.mxml
+++ b/src/cn/superion/material/purchase/manualCheck/ModManualCheck.mxml
@@ -120,6 +120,40 @@
 											</fx:Component>
 										</mx:itemEditor>
 									</mx:DataGridColumn>
+									
+									<mx:DataGridColumn headerText="院长审"
+													   width="50">
+										<mx:itemRenderer>
+											<fx:Component>
+												<mx:CheckBox change="checkbox1_changeHandler(event)"
+															 selected="{data.yzCheck =='1'}"
+															 enabled="true"
+															 textAlign="center">
+													<fx:Script>
+														<![CDATA[
+															import mx.collections.ArrayCollection;
+															import mx.events.FlexEvent;
+															import mx.rpc.remoting.RemoteObject;
+															import cn.superion.base.util.RemoteUtil;
+															protected function checkbox1_changeHandler(event:Event):void
+															{
+																data.yzCheck=event.target.selected?'1':'0';
+																var newAry:ArrayCollection = new ArrayCollection();
+																newAry.addItem(data);
+																var ro:RemoteObject=RemoteUtil.getRemoteObject("sendImpl", function(rev:Object):void
+																{
+																	
+																});
+																ro.updateSendMaterial(data,null);
+															}
+														]]>
+													</fx:Script>
+												</mx:CheckBox>
+												
+											</fx:Component>
+										</mx:itemRenderer>
+									</mx:DataGridColumn>
+									
 									<mx:DataGridColumn headerText="申请原因"
 													   dataField="remark" editable="false"
 													   width="300"/>									
