--- a/src/cn/superion/material/system/deptLimit/ModDeptLimit.mxml
+++ b/src/cn/superion/material/system/deptLimit/ModDeptLimit.mxml
@@ -84,7 +84,7 @@
 											   dataField="limits"
 											   textAlign="left"
 											   width="150"/>
-							<mx:DataGridColumn width="120" dataField="addUpp" 
+							<mx:DataGridColumn width="120" dataField="addUp" 
 											   headerText="本季度累计" editable="false"
 											   textAlign="left"/>
 							<mx:DataGridColumn headerText="操作" editable="false"
@@ -100,6 +100,16 @@
 				<s:HGroup width="100%"
 						  height="33"
 						  horizontalAlign="right">
+					<mx:LinkButton id="btExp"
+								   icon="@Embed('/assets/images/button/exp20.png')"
+								   label=" 导 出 "
+								   skin="mx.skins.halo.ButtonSkin"
+								   buttonMode="true"
+								   fontSize="12"
+								   width="86"
+								   height="26"
+								   click="exp()"/>
+					
 					<mx:LinkButton id="btNew"
 								   icon="@Embed('/assets/images/button/new20.png')"
 								   label=" 新 建 "
